2nd edited .csproj file

--- a/CaptureTranslatorApp/CaptureTranslatorApp.csproj
+++ b/CaptureTranslatorApp/CaptureTranslatorApp.csproj
@@ -136,6 +136,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <Content Include="tessdata\**\*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
