--- a/CaptureTranslatorApp/CaptureTranslatorApp.csproj
+++ b/CaptureTranslatorApp/CaptureTranslatorApp.csproj
@@ -136,6 +136,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="tessdata\**\*">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
